fix: reemplazar .formatted() con String.format() para compatibilidad Java
- Solucionar error de compatibilidad con versiones antiguas de Java
- Usar String.format() en lugar de .formatted() en EmailService
- Permitir que la aplicación inicie correctamente en producción
- Mantener funcionalidad de email HTML profesional